--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+
+
 # Prerequisites
 *.d
 
@@ -34,3 +36,12 @@
 .vs/
 [Dd]ebug/
 [Rr]elease/
+BIN/*
+GUIBIN/*
+
+!BIN/Core.dll
+!BIN/Wordlist.exe
+!BIN/*.txt
+!GUIBIN/Core.dll
+!GUIBIN/GUI.exe
+!GUIBIN/imgui.ini
