--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,3 @@
-
-
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
-
 .vs/
 [Dd]ebug/
 [Rr]elease/
@@ -45,3 +10,4 @@ GUIBIN/*
 !GUIBIN/Core.dll
 !GUIBIN/GUI.exe
 !GUIBIN/imgui.ini
+/报告20190313-2121.diagsession
