--- a/Core/Core.vcxproj.filters
+++ b/Core/Core.vcxproj.filters
@@ -36,4 +36,8 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+    <None Include="ClassDiagram1.cd" />
+  </ItemGroup>
 </Project>
